--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -3,15 +3,9 @@
 #
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
-
+ARG USR=dulun
+ARG MY_VAR=dulun
 ARG BASE_IMAGE=rocker/rstudio:4.3.3
 FROM ${BASE_IMAGE}
-
-
-# ARG R_VERSION=4.3.3
-# ARG OS_IDENTIFIER=ubuntu-2204
-ARG MY_VAR="dulun"
-ENV PASSWORD=$MY_VAR
-
-# RUN apt-get update \
-#     && apt-get install -y --no-install-recommends r-cran-rstan
+ENV USER=${USR}
+ENV PASSWORD=${MY_VAR}
